tests/characterization/snapshots/characterization__backend__backend_status_extra_argument.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\", \"status\",\n\"unexpected\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus backend status does not accept arguments.
--- end ---
