tests/characterization/snapshots/characterization__backend__backend_status_no_metadata.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\", \"status\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: .metadata not found.
This directory is not an OQTOPUS backend environment.
--- end ---
