tests/characterization/snapshots/characterization__backend__backend_versions_extra_argument.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\", \"versions\",\n\"engine\", \"unexpected\",]))"
---
exit: 1
--- stdout ---
Usage:
  oqtopus backend versions <engine|tranqu|gateway>
--- stderr ---
--- end ---
