tests/characterization/snapshots/characterization__backend__backend_versions_help.snap
---
source: tests/characterization/backend.rs
expression: context.render_output(&canonical)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend versions <engine|tranqu|gateway>
--- stderr ---
--- end ---
