tests/characterization/snapshots/characterization__backend__backend_versions_unknown_component.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\", \"versions\",\n\"unknown\",]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown component: unknown
--- end ---
