tests/characterization/snapshots/characterization__backend__backend_versions_without_any_tags.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject_with_remote_refs([\"backend\",\n\"versions\", \"engine\"],\nb\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa refs/heads/main\\n\", false,))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: failed to query GitHub tags API: https://github.com/oqtopus-team/oqtopus-engine.git/info/refs?service=git-upload-pack
--- end ---
